Fixed APK packaging

--- a/__alpine/APKBUILD
+++ b/__alpine/APKBUILD
@@ -5,7 +5,7 @@ pkgver=0.100
 pkgrel=0
 pkgdir=/data/packages
 builddir="$startdir/src/BUILD"
-pkgdesc="Management of root CAs and server certificates"
+pkgdesc="Filesystem tool to rename files"
 url="https://github.com/jeanfrancoisgratton/lowerdir"
 arch=x86_64
 license=GPL2
@@ -19,11 +19,11 @@ build() {
 	mkdir -p "$builddir" && cd "$builddir"/.. && rm -rf BUILD && cp -R "$startdir"/../src . && mv src BUILD
     cd "$builddir"
     make -f "$startdir"/Makefile prepare
-    CGO_ENABLED=0 go build -o "binaryname".exe .
+    CGO_ENABLED=0 go build -o "$binaryname".exe .
 }
 
 package() {
-        make -f "$startdir"/Makefile BUILDDIR="$builddir" PREFIX=/opt PKGNM="binaryname" DESTDIR="$pkgdir" install
+        make -f "$startdir"/Makefile BUILDDIR="$builddir" PREFIX=/opt PKGNM="$binaryname" DESTDIR="$pkgdir" install
 }
 
 
