--- a/__debian/control
+++ b/__debian/control
@@ -1,5 +1,5 @@
 Package: lowerdir
-Version: 1.000-1
+Version: 1.01.00
 Architecture: amd64
 Maintainer: J.F.Gratton <nexus@famillegratton.net>
 Description: Batch rename files in directory
